--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -386,3 +386,32 @@ pre{
 /*.fade-out {
     opacity: 0;
 }*/
+
+/*feedback visual - enquanto acontece o carregamento da pagina*/
+.spinner {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    animation: spin 0.8s linear infinite;
+    margin: 20px auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+/*animacao para os tres pontinho no loading*/
+.pontos-animados::after {
+    content: "";
+    animation: animarPontos 1.5s steps(4, end) infinite;
+}
+
+@keyframes animarPontos {
+    0%   { content: ""; }
+    25%  { content: "."; }
+    50%  { content: ".."; }
+    75%  { content: "..."; }
+    100% { content: ""; }
+}
